# TG_CONTROLLER

./: 00_BASLA.txt  00_V004_FIX1_TALIMAT.txt  00_V004_YUKLEME_TALIMATI.txt  00_V005_1_BAGLANTI_DUZELTMESI.txt  00_V005_YUKLEME_TALIMATI.txt  CMakeLists.txt  CMakeLists_V005.txt  GITHUB_WORKFLOW_BUILD_V005.yml  GITHUB_WORKFLOW_BUILD_V005_1.yml  LICENSE  MANIFEST_SHA256.txt  README.md  STATIC_VALIDATION.json  Startup_V4_1.bat  Startup_V4_2.bat  Startup_V4_3.bat  Startup_V4_4.bat  Startup_V4_6.bat  TG_CONTROLLER_PRO_V4_1_HOTFIX_RAPORU.md  TG_CONTROLLER_PRO_V4_2_TRAY_HOTFIX_RAPORU.md  TG_CONTROLLER_PRO_V4_3_RAPORU.md  TG_CONTROLLER_PRO_V4_4_RAPORU.md  TG_CONTROLLER_PRO_V4_5_RAPORU.md  TG_CONTROLLER_PRO_V4_6_RAPORU.md  TG_CONTROLLER_PRO_V4_DUZELTME_RAPORU.md  VALIDATION_REPORT.txt  VALIDATION_V4_1.txt  VALIDATION_V4_2.txt  VALIDATION_V4_3.txt  VALIDATION_V4_4.txt  VALIDATION_V4_5.txt  VALIDATION_V4_6.txt  WORKFLOW_KOPYASI_BUILD_PRO_V4_1.yml  WORKFLOW_KOPYASI_BUILD_PRO_V4_2.yml  WORKFLOW_KOPYASI_BUILD_PRO_V4_3.yml  WORKFLOW_KOPYASI_BUILD_PRO_V4_4.yml  WORKFLOW_KOPYASI_BUILD_PRO_V4_6.yml
.github/workflows/: build.yml
TG_CONTROLLER_V003/: pico_sdk_import.cmake
TG_CONTROLLER_V004/: README.md
TG_CONTROLLER_V004/docs/: V004_PLAYER1_TEST.md
TG_CONTROLLER_V004/firmware/common/: tusb_config.h  usb_descriptors.c
TG_CONTROLLER_V004/firmware/gun_p1/: usb_descriptors.h
desktop/: app.py  requirements.txt
desktop/tg_controller/: config.py  device_manager.py  firmware_loader.py  game.py  macro.py  single_instance.py  startup.py  tray.py  ui.py
docs/: EKSIKLER_KAPATMA_RAPORU.md  KURULUM.md  PARADISE_LOST_MAKRO.md  TEST_PLANI.md  V002_KULLANIM.md  V005_TEST_PLANI.md
firmware/common/: tusb_config.h  usb_descriptors.c  usb_descriptors.h
firmware/controller/: main.c
firmware/gun/: main.c  usb_descriptors.c  usb_descriptors.h
firmware/gun_p1/: main.c  usb_descriptors.c
scripts/: check_firmware_size.py  static_validation.py
tests/: test_config.py  test_macro.py  test_project_contract.py
